<resources>
    <string name="app_name">Bluetooth surround sound</string>
    <string name="headline_text">Bluetooth surround sound</string>
    <string name="turn_on">Turn on</string>
    <string name="enable">ENABLE</string>
    <string name="bluetooth_off">BLUETOOTH IS OFF</string>
    <string name="location_off">LOCATION IS OFF</string>
    <string name="turn_on_search">Start process</string>
    <string name="turn_off">Turn off</string>
    <string name="turn_off_search">Search…</string>
    <string name="process_on">Searching is turned on</string>
    <string name="process_off">Searching is turned off</string>
    <string name="channel_id">Bluetooth</string>
    <string name="channel_name">Bluetooth search</string>
    <string name="process_started">Started search!</string>
    <string name="process_ended">Stopped search!</string>
    <string name="process_error">Error: BluetoothAdapter doesn\'t exist.</string>
    <string name="channel_description">Bluetooth search</string>
    <string name="image_description">Icon for search state</string>
    <string name="turn_on_pair">Find devices</string>
    <string name="pair_started">Search is on.</string>
    <string name="permission_explanation">Permission is required for Bluetooth</string>
    <string name="permission_denied">Can\'t perform search</string>
    <string name="a2dp_list">BLE and A2DP devices: </string>
    <string name="device_content_description">Shows if device is selected</string>
    <string name="title_location_permission">Permission For Location</string>
    <string name="title_foreground_permission">Permission For Foreground Service</string>
    <string name="text_foreground_permission">This is required to run background service without interrupt</string>
    <string name="text_location_permission">Location is required to find BLE tags</string>
    <string name="ok">OK</string>
    <string name="loading">Waiting for services to be enabled</string>
    <string name="scan">Scanning…</string>
</resources>
